2009-01-04  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py:
	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/dbus/svn_client.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Implemented a temporary hack to make the context menu use the status cache. 
	We have to refactor the SVN class and also the DBus stuff in the near future.

2009-01-03  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	I spoke too soon, really trust me I tested it this time.

2009-01-03  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Ignore that.... now it should though!

2009-01-03  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	DBus restart menu item now working.

2009-01-03  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/vcs/svn.py:
	And yet another logic error, that for some reason I didn't catch earlier.

2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py:
	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Create an actual NautilusSvn service to compliment the StatusMonitor,
	also added code to start the DBus service when it's not running.

2009-01-02  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-bug.s
	vg:
	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-dbus.
	svg:
	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-run.s
	vg:
	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-stop.
	svg:
	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py: