@@ -1,3 +1,11 @@
+2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>
+
+	* nautilussvn/lib/dbus/service.py:
+	Forgot to update exit call to match DBus style.
+	
+	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
+	Added recursive refresh status, there are some bugs though.
+
 2009-01-04  Bruce van der Kooij  <brucevdkooij@gmail.com>
 
 	* nautilussvn/lib/dbus/service.py:
